# ClassFactory

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  class_config_example.yaml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  src.beamer_bot.html  src.class_factory.html  src.concept_web.html  src.quiz_maker.html  src.utils.html
.doctrees/: environment.pickle  index.doctree  src.beamer_bot.doctree  src.class_factory.doctree  src.concept_web.doctree  src.quiz_maker.doctree  src.utils.doctree
.github/workflows/: documentation.yml
_modules/: index.html
_modules/src/utils/: slide_pipeline_utils.html  tools.html
_sources/: src.utils.rst.txt
class_factory/: ClassFactory.py
class_factory/beamer_bot/: BeamerBot.py  __init__.py  base_slide_generator.py  beamer_prompts.py  beamer_slides.py  latex_prompts.py  latex_slide_generator.py  latex_slide_preamble.py  latex_slides.py  pptx_prompts.py  pptx_slide_generator.py  pptx_slides.py  slide_preamble.py
class_factory/beamer_bot/archive/: BeamerBot_old_backup.py  README.md
class_factory/concept_web/: ConceptWeb.py  build_concept_map.py  concept_extraction.py  prompts.py  visualize_graph.py
class_factory/quiz_maker/: QuizMaker.py  quiz_prompts.py  quiz_to_app.py  quiz_viz.py
class_factory/utils/: base_model.py  llm_validator.py  load_documents.py  ocr_pdf_files.py  prompt_user_for_reading_matches.py  response_parsers.py  slide_pipeline_utils.py  tools.py  validator_prompts.py
class_factory/utils/archive/: ocr_pdf_files.py  test_ocr_pdf_files.py
docs/: .gitignore
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  src.beamer_bot.html  src.class_factory.html  src.concept_web.html  src.quiz_maker.html  src.utils.html
docs/html/_modules/: index.html
docs/html/_modules/src/beamer_bot/: BeamerBot.html
docs/html/_modules/src/concept_web/: build_concept_map.html  concept_extraction.html
docs/html/_modules/src/quiz_maker/: quiz_to_app.html  quiz_viz.html
docs/html/_sources/: index.rst.txt  src.beamer_bot.rst.txt  src.concept_web.rst.txt  src.quiz_maker.rst.txt
docs/source/: class_factory.beamer_bot.rst  class_factory.concept_web.rst  class_factory.quiz_maker.rst  class_factory.rst  class_factory.utils.rst  conf.py  configuration.rst  examples.rst  index.rst  installation.rst  modules.rst  src.beamer_bot.rst  src.class_factory.rst  src.quiz_maker.rst  src.rst
notebooks/: fig_1.py  get_course_readings.py  run_classfactory.py
src/BeamerBot/: create_pipeline_slides.py  get_course_readings.py
src/ConceptWeb/: ConceptWeb.py  concept_extraction.py  prompts.py  response_parsers.py
src/QuizMaker/: make_a_quiz.py  quiz_to_app.py
src/beamer_bot/: BeamerBot.py  beamer_prompts.py  slide_preamble.py
src/class_factory/: ClassFactory.py
src/concept_web/: ConceptWeb.py  build_concept_map.py  concept_extraction.py  visualize_graph.py
src/quiz_maker/: QuizMaker.py  quiz_prompts.py  quiz_to_app.py  quiz_to_ppt.py  quiz_viz.py
src/utils/: load_documents.py  ocr_pdf_files.py  response_parsers.py  slide_pipeline_utils.py  tools.py
tests/: __init__.py  conftest.py  pytest.ini  test_base_model.py  test_beamer_bot.py  test_build_concept_map.py  test_classfactory.py  test_concept_extraction.py  test_concept_web.py  test_llm_validator.py  test_load_documents.py  test_ocr_pdf_files.py  test_quiz_maker.py  test_quiz_to_app.py
tests/data/: conceptlist_test.json  relationshiplist_test.json
