[project]
authors = [
    {name = "speters9", email = "speters9@stanford.edu"},
]
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "jsonpatch>=1.33",
    "langchain-google-genai>=2.1.0",
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "langchain-core>=0.3.45",
    "langchain-openai>=0.3.9",
    "markitdown>=0.0.2",
    "pdf2docx>=0.5.8",
    "pypdf>=5.4.0",
    "pyprojroot>=0.3.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "markupsafe>=3.0.2",
    "docling>=2.26.0",
    "pytesseract>=0.3.13",
    "textblob>=0.19.0",
    "torch>=2.5.0",
    "scikit-learn>=1.6.1",
    "cdlib>=0.4.0",
    "inflect>=7.5.0",
    "igraph>=0.11.8",
    "leidenalg>=0.10.2",
    "pyvis>=0.3.2",
    "langchain-anthropic>=0.3.10",
    "notebook>=7.4.4",
    "editdistance>=0.8.1",
    "thinc>=9.1.1",
    "pdf2image>=1.17.0",
    "fuzz>=0.1.1",
]
name = "class-factory"
version = "0.1.0"
description = "class prep products with langchain"
readme = "README.md"

[tool.uv.sources]
torch = [{ index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'"}]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.setuptools]
# This is where you configure Setuptools-specific options.

# This says: "When searching for packages, look in 'class_factory' and treat it as the root folder."
[tool.setuptools.packages.find]
where = ["class_factory"]

[dependency-groups]
dev = [

]
ocr = [

]

[tool.uv]
default-groups = []
